--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="cabecalho-menu-item">Comunidade Omena</a>
         <a class="cabecalho-menu-item">Tutorial</a>
         <a class="cabecalho-menu-item">Open Source</a>
-        <a class="cabecalho-menu-item">Comnados</a>
+        <a class="cabecalho-menu-item">Comandos</a>
       </nav>
     </header>
     <main class="conteudo">
